@@ -7,6 +7,8 @@
 	* Added: Property\DateTime::hasTime().
 	* Added: Property\MultiDateTime::hasTime().
 	* Added: Property::getValue().
+	* Added: Document class.
+	* Added: Document::createComponent and Document::createProperty.
 
 
 2.0.7-stable (2013-03-05)
